--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+
 plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.0'
     id 'java-library'
@@ -40,11 +42,10 @@ dependencies {
 
     // Frameworks & MySQL APIs
     implementation 'dev.rosewood:rosegarden:1.1.0.48-SNAPSHOT'
-    implementation 'io.github.bananapuncher714:nbteditor:7.18.2'
-    implementation('dev.triumphteam:triumph-gui:3.1.3') {
-        exclude group: 'com.google.code.gson', module: 'gson' // Already included in spigot-api
-        exclude group: "net.kyori", module: "*" // Already included in paper-api
-    }
+//    implementation('dev.triumphteam:triumph-gui:3.1.3') {
+//        exclude group: 'com.google.code.gson', module: 'gson' // Already included in spigot-api
+//        exclude group: "net.kyori", module: "*" // Already included in paper-api
+//    }
 }
 
 shadowJar {
@@ -55,5 +56,14 @@ shadowJar {
     relocate "dev.rosewood.rosegarden", "${project.group}.libs.rosegarden"
     relocate "dev.triumphteam.gui", "${project.group}.libs.gui"
 }
+
+processResources {
+    from(sourceSets.main.resources.srcDirs) {
+        include '**/*.yml'
+        filter ReplaceTokens, tokens: ["version": project.property("version")]
+        duplicatesStrategy DuplicatesStrategy.INCLUDE
+    }
+}
+
 
 tasks.getByName("build").dependsOn("shadowJar")
