--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,3 +6,4 @@ api-version: '1.13'
 description: A parkour plugin times, checkpoints, leaderboards and more.
 softdepend:
   - PlaceholderAPI
+  - Multiverse-Core
