--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,6 @@ repositories {
     maven { url "https://repo.extendedclip.com/content/repositories/placeholderapi/" }
     maven { url "https://repo.codemc.org/repository/maven-public/" }
     maven { url 'https://jitpack.io' }
-
 }
 
 dependencies {
@@ -50,7 +49,9 @@ dependencies {
 
 shadowJar {
     archiveClassifier.set(null)
-//    minimize() // This removes the IntegerRoseCommandArgumentHandler class, which is needed for the plugin to work.
+    minimize {
+        exclude(dependency("dev.rosewood:rosegarden:.*"))
+    }
 
     relocate "org.jetbrains", "${project.group}.libs.jetbrains"
     relocate "dev.rosewood.rosegarden", "${project.group}.libs.rosegarden"
