--- a/build.gradle
+++ b/build.gradle
@@ -35,16 +35,16 @@ repositories {
 
 dependencies {
     // General Plugin Dependencies
+//    compileOnly 'org.spigotmc:spigot-api:1.19.2-R0.1-SNAPSHOT'
     compileOnly 'io.papermc.paper:paper-api:1.19.2-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.10.9'
-    compileOnly 'org.jetbrains:annotations:23.0.0'
+    compileOnly 'org.jetbrains:annotations:23.1.0'
 
     // Frameworks & MySQL APIs
     implementation 'dev.rosewood:rosegarden:1.1.0.49-SNAPSHOT'
-//    implementation('dev.triumphteam:triumph-gui:3.1.3') {
-//        exclude group: 'com.google.code.gson', module: 'gson' // Already included in spigot-api
-//        exclude group: "net.kyori", module: "*" // Already included in paper-api
-//    }
+    implementation('dev.triumphteam:triumph-gui:3.1.3') {
+        exclude group: 'com.google.code.gson', module: 'gson' // Already included in spigot-api
+    }
 }
 
 shadowJar {
